# XeniaVR

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  premake5.lua  xb  xb.bat  xb.ps1  xenia-build.py
src/xenia/: CMakeLists.txt  config.cc  config.h  emulator.cc  emulator.h  memory.cc  memory.h  xbox.h
src/xenia/app/: CMakeLists.txt  console_settings_dialog.cc  console_settings_dialog.h  emulator_window.cc  emulator_window.h  premake5.lua  profile_dialogs.cc  xenia_main.cc
src/xenia/app/discord/: CMakeLists.txt
src/xenia/apu/: CMakeLists.txt  audio_media_player.cc  audio_media_player.h  audio_system.cc  audio_system.h  xma_context.cc  xma_context.h  xma_context_fake.cc  xma_context_fake.h  xma_context_master.cc  xma_context_master.h  xma_context_new.cc  xma_context_new.h  xma_context_old.cc  xma_context_old.h  xma_decoder.cc  xma_decoder.h
src/xenia/apu/alsa/: CMakeLists.txt  alsa_audio_driver.cc  alsa_audio_driver.h  alsa_audio_system.cc  alsa_audio_system.h  premake5.lua
src/xenia/apu/nop/: CMakeLists.txt  nop_audio_system.h
src/xenia/apu/sdl/: CMakeLists.txt  sdl_audio_system.h
src/xenia/apu/xaudio2/: CMakeLists.txt  xaudio2_audio_driver.cc  xaudio2_audio_system.h
src/xenia/base/: CMakeLists.txt  arena.h  assert.h  atomic.h  chrono.h  clock.cc  clock.h  clock_arm64.cc  clock_posix.cc  cvar.cc  cvar.h  debugging_win.cc  exception_handler_win.cc  filesystem.cc  filesystem.h  filesystem_posix.cc  logging.cc  logging.h  main_init_posix.cc  main_init_win.cc  main_win.cc  mapped_memory_posix.cc  math.h  memory.cc  memory_posix.cc  memory_win.cc  mutex.cc  mutex.h  pe_image.h  platform.h  platform_amd64.cc  platform_arm64.cc  platform_arm64.h  profiling.h  string_util.h  threading.h  threading_posix.cc  threading_win.cc
src/xenia/base/testing/: CMakeLists.txt  heap_test.cc  physical_heap_test.cc  threading_test.cc
src/xenia/cpu/: CMakeLists.txt  breakpoint.cc  export_resolver.h  function.cc  lzx.cc  mmio_handler.cc  processor.cc  stack_walker_win.cc  test_module.cc  test_module.h  thread_state.cc  xex_module.cc  xex_module.h
src/xenia/cpu/backend/: assembler.h  backend.h  code_cache_base.h
src/xenia/cpu/hir/: hir_builder.cc  hir_builder.h  instr.h  opcodes.h  opcodes.inl  value.cc
src/xenia/cpu/ppc/: ppc_context.cc  ppc_decode_data.h  ppc_emit_altivec.cc  ppc_emit_alu.cc  ppc_emit_control.cc  ppc_emit_fpu.cc  ppc_emit_memory.cc  ppc_hir_builder.cc  ppc_hir_builder.h  ppc_instr.h  ppc_opcode.h  ppc_opcode_disasm.cc  ppc_opcode_disasm_gen.cc  ppc_opcode_info.h  ppc_opcode_lookup_gen.cc  ppc_opcode_table_gen.cc  ppc_translator.cc
src/xenia/cpu/testing/: CMakeLists.txt  add_test.cc  backend_integration_test.cc  compare_test.cc  edge_case_test.cc  f32_test.cc  guest_address_truncation_test.cc  load_vector_shl_shr_test.cc  memory_store_load_test.cc  misc_opcode_test.cc  opcode_coverage_test.cc  pack_test.cc  set_rounding_mode_test.cc  shl_test.cc  unpack_test.cc  util.h  vector_flush_denorm_test.cc  vector_nan_propagation_test.cc  vector_sha_test.cc  vector_shl_test.cc  vector_shr_test.cc  vmx_fpcr_isolation_test.cc
src/xenia/debug/ui/: CMakeLists.txt  debug_window.cc
src/xenia/gpu/: CMakeLists.txt  command_processor.cc  command_processor.h  draw_util.cc  draw_util.h  dxbc.h  dxbc_shader_translator.cc  dxbc_shader_translator.h  dxbc_shader_translator_fetch.cc  dxbc_shader_translator_memexport.cc  dxbc_shader_translator_om.cc  gpu_flags.cc  gpu_flags.h  graphics_system.cc  graphics_system.h  packet_disassembler.cc  pipeline_util.h  pm4_command_processor_implement.h  premake5.lua  register_file.cc  render_target_cache.cc  render_target_cache.h  shader.h  shader_storage.h  shader_translator_disasm.cc  shared_memory.cc  shared_memory.h  spirv_builder.cc  spirv_builder.h  spirv_compatibility.h  spirv_shader_translator.cc  spirv_shader_translator.h  spirv_shader_translator_alu.cc  spirv_shader_translator_fetch.cc  spirv_shader_translator_memexport.cc  spirv_shader_translator_rb.cc  texture_cache.cc  texture_cache.h  texture_info.h  texture_info_formats.cc  (+7 more)
src/xenia/gpu/d3d12/: CMakeLists.txt  d3d12_command_processor.cc  d3d12_command_processor.h  d3d12_render_target_cache.cc  d3d12_render_target_cache.h  d3d12_shader.h  d3d12_shared_memory.cc  d3d12_shared_memory.h  d3d12_texture_cache.cc  d3d12_texture_cache.h  d3d12_zpd_query_pool.cc  d3d12_zpd_query_pool.h  deferred_command_list.cc  deferred_command_list.h  pipeline_cache.cc  pipeline_cache.h
src/xenia/gpu/null/: CMakeLists.txt  null_graphics_system.cc
src/xenia/gpu/shaders/: adaptive_quad.hs.glsl  adaptive_triangle.hs.glsl  continuous_quad_1cp.hs.glsl  continuous_quad_4cp.hs.glsl  continuous_triangle_1cp.hs.glsl  continuous_triangle_3cp.hs.glsl  discrete_quad_1cp.hs.glsl  discrete_quad_4cp.hs.glsl  discrete_triangle_1cp.hs.glsl  discrete_triangle_3cp.hs.glsl  pixel_formats.xesli  placeholder.ps.glsl  resolve.xesli  resolve_downscale.cs.xesl  tesc.spv  vert.spv  (+9 more)
src/xenia/hid/: CMakeLists.txt  hid_demo.cc  input.h  input_driver.h  input_system.cc  input_system.h
src/xenia/kernel/: CMakeLists.txt  kernel_flags.cc  kernel_state.cc  kernel_state.h  smc.cc  smc.h  title_id_utils.h  user_module.cc  user_module.h  xconfig.cc  xconfig.h  xenumerator.cc  xenumerator.h  xevent.cc  xfile.cc  xfile.h  xmutant.cc  xmutant.h  xnotifylistener.cc  xnotifylistener.h  xobject.cc  xobject.h  xsemaphore.cc  xsemaphore.h  xsession.h  xsocket.cc  xsocket.h  xthread.cc  xthread.h  xtimer.cc  xtimer.h
src/xenia/patcher/: CMakeLists.txt  patch_db.h  plugin_loader.h
src/xenia/ui/: CMakeLists.txt  file_picker_win.cc  imgui_dialog.cc  imgui_dialog.h  imgui_drawer.cc  imgui_drawer.h  imgui_guest_notification.cc  imgui_host_notification.cc  imgui_notification.cc  imgui_notification.h  premake5.lua  renderdoc_api.cc  renderdoc_api.h  resources.h  window.cc  window.h  window_gtk.cc  window_listener.h  window_win.cc  window_win.h  windowed_app_main_posix.cc  windowed_app_main_win.cc
src/xenia/vfs/: CMakeLists.txt  entry.cc  entry.h  virtual_file_system.cc  virtual_file_system.h
(+483 files in other folders)
